--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html land='en'>
+<html lang='en'>
 <head>
 	<title>Welcome to Holberton</title>
 </head>
 <body>
-	<h1>Hello world</h2>
+	<h1>Hello world</h1>
 </body>
 </html>
